--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Price Tables</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <div class="page">
-        
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Work+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <div class="price-tables">
+      <div class="price-card price-card_low">
+        <div>
+          <h2 class="price-card__title">Basic</h2>
+          <h2 class="price-card__subtitle">Website</h2>
+        </div>
+        <h3 class="price-card__price">99€</h3>
+        <p class="price-card__description">
+          Simple website made in the world's most popular CMS system, Wordpress.
+        </p>
+        <ul class="price-card__options-list">
+          <li class="price-card__option">Website in WordPress</li>
+          <li class="price-card__option">3 sub pages</li>
+          <li class="price-card__option">Theme customized</li>
+          <li class="price-card__option">Help and guidance</li>
+          <li class="price-card__option">System introduction</li>
+          <li class="price-card__option">2 weeks free support</li>
+        </ul>
+        <button class="price-card__order-btn">ORDER NOW</button>
+      </div>
     </div>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
