--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <div class="price-tables">
-      <div class="price-card price-card_low">
+      <div class="price-card price-card_low-price">
         <div>
           <h2 class="price-card__title">Basic</h2>
           <h2 class="price-card__subtitle">Website</h2>
@@ -32,7 +32,45 @@
           <li class="price-card__option">System introduction</li>
           <li class="price-card__option">2 weeks free support</li>
         </ul>
-        <button class="price-card__order-btn">ORDER NOW</button>
+        <button class="order-btn price-card__order-btn">ORDER NOW</button>
+      </div>
+      <div class="price-card price-card_medium-price popular-label">
+        <div>
+          <h2 class="price-card__title">Business</h2>
+          <h2 class="price-card__subtitle">Website</h2>
+        </div>
+        <h3 class="price-card__price">299€</h3>
+        <p class="price-card__description">
+            Advanced website made in the world's most popular CMS system, Wordpress.
+        </p>
+        <ul class="price-card__options-list">
+          <li class="price-card__option">Website in WordPress</li>
+          <li class="price-card__option">3-5 sub pages</li>
+          <li class="price-card__option">Theme customized</li>
+          <li class="price-card__option">Help and guidance</li>
+          <li class="price-card__option">System introduction</li>
+          <li class="price-card__option">1 month free support</li>
+        </ul>
+        <button class="order-btn price-card__order-btn">ORDER NOW</button>
+      </div>
+      <div class="price-card price-card_high-price">
+        <div>
+          <h2 class="price-card__title">Webshop</h2>
+          <h2 class="price-card__subtitle">Website</h2>
+        </div>
+        <h3 class="price-card__price">599€</h3>
+        <p class="price-card__description">
+            Your very own webshop made the world's most popular CMS system, Wordpress.
+        </p>
+        <ul class="price-card__options-list">
+          <li class="price-card__option">Website in WordPress</li>
+          <li class="price-card__option">3-5 sub pages</li>
+          <li class="price-card__option">Theme customized</li>
+          <li class="price-card__option">Help and guidance</li>
+          <li class="price-card__option">System introduction</li>
+          <li class="price-card__option">2 weeks free support</li>
+        </ul>
+        <button class="order-btn price-card__order-btn">ORDER NOW</button>
       </div>
     </div>
   </head>
